--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,17 @@
       transform: translateX(-100%);
     }
   }
+ 
+ 
+ 
+ 
+  --animate-crouse: slide 30s linear infinite;
+  @keyframes crouse {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
 }
